--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@ xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
 		<groupId>hu.qgears</groupId>
 		<artifactId>rtemplate</artifactId>
-		<version>1.0.0</version>
+		<version>2.0.2-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<modules>
 		<module>hu.rtemplate</module>
