--- a/hu.rtemplate/pom.xml
+++ b/hu.rtemplate/pom.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>hu.qgears</groupId>
-    <artifactId>root</artifactId>
-    <version>1.0.0</version>
-    <relativePath>../../parent-poms/root</relativePath>
-  </parent>
-  <groupId>hu.qgears</groupId>
-  <artifactId>hu.rtemplate</artifactId>
-  <version>2.3.0-SNAPSHOT</version>
-  <packaging>eclipse-plugin</packaging>
+<project
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>hu.qgears</groupId>
+		<artifactId>rtemplate-parent</artifactId>
+		<version>1.0.0-SNAPSHOT</version>
+		<relativePath>../../parent-poms/rtemplate-parent/</relativePath>
+	</parent>
+	<groupId>hu.qgears</groupId>
+	<artifactId>hu.rtemplate</artifactId>
+	<version>2.3.0-SNAPSHOT</version>
+	<packaging>eclipse-plugin</packaging>
 </project>
