--- a/hu.rtemplate/pom.xml
+++ b/hu.rtemplate/pom.xml
@@ -7,7 +7,7 @@
 		<groupId>hu.qgears</groupId>
 		<artifactId>rtemplate-parent</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
-		<relativePath>../../parent-poms/rtemplate-parent/</relativePath>
+		<relativePath>../build/rtemplate-parent/</relativePath>
 	</parent>
 	<groupId>hu.qgears</groupId>
 	<artifactId>hu.rtemplate</artifactId>
